<resources>
    <string name="app_name">Abayomi</string>
    <string name="login">Login:</string>
    <string name="senha">Senha:</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_estoque">Estoque</string>
    <string name="nav_lucros">Lucros</string>
    <string name="nav_gastos" />
    <string name="nav_forn">Fornecedor</string>
    <string name="nav_gasto">Gastos</string>
    <string name="nav_ferramentas">Ferramentas</string>
    <string name="title_activity_menu">menuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_lucros">Lucros</string>
    <string name="title_estoque">Estoque</string>
    <string name="title_cadastro">Registrar-se</string>
    <string name="btn_login">Login</string>
    <string name="view_embaixologo">Controle de estoque para mini empreendedores</string>
    <string name="btn_registrar">Registrar-se</string>
    <string name="title_mais">Menu</string>
    <string name="btnLogin">Login</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navConfig">Configurações</string>
    <string name="title_activity_princi">PrinciActivity</string>
    <string name="navHome">Inicio</string>
    <string name="navContatos">Contatos</string>
    <string name="navStock">Estoque</string>
    <string name="itemID">ID:</string>
    <string name="ItmeEmAIL">Email:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="item_ID" />
    <string name="itemid">ID:</string>
</resources>
