<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/navHome" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_account"
            android:title="@string/navContatos" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_store"
            android:title="@string/nav_estoque" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/navConfig" />
        </menu>
    </item>

</menu>
